force-app/main/default/objects/SurveyQuestion__c/SurveyQuestion__c.object-meta.xml
<CustomObject>
    <label>Survey Question</label>
    <nameField>
        <label>Survey Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>