force-app/main/default/objects/SurveyQuestion__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>Value need to match with parent value</description>
    <inlineHelpText>Value need to match with parent value</inlineHelpText>
    <label>Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>