force-app/main/default/objects/SurveyQuestion__c/fields/DeleteRecord__c.field-meta.xml
<CustomField>
    <fullName>DeleteRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark the record for deletion</description>
    <inlineHelpText>Mark the record for deletion</inlineHelpText>
    <label>Delete Record </label>
    <type>Checkbox</type>
</CustomField>