force-app/main/default/objects/SurveyQuestion__c/fields/HasChild__c.field-meta.xml
<CustomField>
    <fullName>HasChild__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Question Has Sub Question Related</description>
    <inlineHelpText>Question Has Sub Question Related</inlineHelpText>
    <label>hasChild</label>
    <type>Checkbox</type>
</CustomField>