force-app/main/default/objects/SurveyQuestion__c/fields/LongDescription__c.field-meta.xml
<CustomField>
    <fullName>LongDescription__c</fullName>
    <label>Long Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>