force-app/main/default/objects/SurveyQuestion__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <defaultValue>&quot;[]&quot;</defaultValue>
    <description
  >Options are used for picklist values or mulitselect values, Which represet json format key value pair</description>
    <inlineHelpText
  >Options are used for picklist values or mulitselect values, Which represet json format key value pair</inlineHelpText>
    <label>Options</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>