force-app/main/default/objects/SurveyQuestion__c/fields/OptionType__c.field-meta.xml
<CustomField>
    <fullName>OptionType__c</fullName>
    <label>Option Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>