force-app/main/default/objects/SurveyQuestion__c/fields/ParentQuestionCode__c.field-meta.xml
<CustomField>
    <fullName>ParentQuestionCode__c</fullName>
    <label>Parent Question Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>