force-app/main/default/objects/SurveyQuestion__c/fields/QuestionCode__c.field-meta.xml
<CustomField>
    <fullName>QuestionCode__c</fullName>
    <label>Question Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>