force-app/main/default/objects/SurveyQuestion__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true mark record as mandatory in UI</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>