force-app/main/default/objects/SurveyQuestion__c/fields/ShowQuestionNumber__c.field-meta.xml
<CustomField>
    <fullName>ShowQuestionNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Question Number</label>
    <type>Checkbox</type>
</CustomField>