force-app/main/default/objects/SurveyQuestion__c/fields/SurveyTemplate__c.field-meta.xml
<CustomField>
    <fullName>SurveyTemplate__c</fullName>
    <label>Survey Question</label>
    <referenceTo>SurveyTemplate__c</referenceTo>
    <relationshipLabel>Survey Questions</relationshipLabel>
    <relationshipName>SurveyQuestions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>